--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@
     max-width: 75%;
     text-align: center;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 30px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -54,6 +54,10 @@ button {
     flex-direction: row;
     justify-content: space-around;
     border: 1px solid black;
+}
+
+.flex-blackjack-row-4,
+.flex-blackjack-row-5 {
     padding: 5px;
 }
 
@@ -63,12 +67,27 @@ button {
     padding: 8px;
 }
 
+.flex-box-container-1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border: 1px solid black;
+    background-color: white;
+}
+ 
 .flex-blackjack-row-3 div {
     border: 1px solid black;
     flex: 1;
+    justify-content: space-around;
     padding: 10px;
-    height: 280px;
+    min-height: 336px;
     text-align: center;
+}
+
+.flex-blackjack-row-3 img {
+    width: 20%;
+    height: auto;
+    padding: 10px;
 }
 
 .flex-blackjack-row-4 button {
@@ -80,6 +99,7 @@ button {
     border: 1px solid black;
     display: flex;
     border-radius: 4px;
+    margin: 10px;
 }
 
 table, th, td {
